--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ mysql/__pycache__/mysqllib.cpython-37.pyc
 couchdb/couchdb_driver_test.py
 mysql/mysql_data_check.py
 couchdb/aws_lambda_cluster_config.py
+modules/__pycache__/pytimer.cpython-36.pyc
