--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ couchdb/couchdb_driver_test.py
 mysql/mysql_data_check.py
 couchdb/aws_lambda_cluster_config.py
 modules/__pycache__/*
+modules/__pycache__/pytimer.cpython-36.pyc
