--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "packages/mysqllib"]
-	path = packages/mysqllib
-	url = git@github.com:Silvarion/mysqllib.git
+[submodule "packages/pyoomysql"]
+	path = packages/pyoomysql
+	url = git@github.com:Silvarion/pyoomysql.git
