Updated gitignore and submodules

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,8 +1,11 @@
 [submodule "packages/pyoomysql"]
 	path = packages/pyoomysql
-	url = git@github.com:Silvarion/pyoomysql.git
+	url = https://github.com/Silvarion/pyoomysql.git
 
 [submodule "packages/pyoocouchdb"]
 	path = packages/pyoocouchdb
-	url = git@github.com:Silvarion/pyoocouchdb.git
+	url = https://github.com/Silvarion/pyoocouchdb.git
 
+[submodule "packages/pyoocass"]
+	path = packages/pyoocass
+	url = https://github.com/Silvarion/pyoocass.git
